--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -40,6 +40,7 @@ jobs:
 
       - uses: supabase/setup-cli@v1
       - run: supabase start
+      - run: supabase db reset
 
       - name: Run Test
         run: npm run test:local
